# pretty-qr-code

./: .gitignore  AUR_PUBLISHING_GUIDE.md  LICENSE  PACKAGING.md  PKGBUILD  README.md  flake.nix  pyproject.toml  setup.py  shell.nix
debian/: changelog  control  copyright  postrm  qrcode-pretty.wrapper  rules
pkgs/: default.nix
qr-code-generator/: qr-code-generator.py  qr-simple.py
src/: const.py  entrypoint.py  qr_code_generator.py
src/pretty_qr_code/: __init__.py  const.py  entrypoint.py  qr_code_generator.py
src/qrcode_pretty/: entrypoint.py  qr_code_generator.py
